public class Cubiculo {
public static void main(String[] args) {

String Id;
int Numero;
int Ancho ;
int Largo;
Boolean Estado;
String Tipo;    
}
}
