public class Guardia {
public static void main(String[] args) {

String Identificacion;
String Tipo;
String Nombre;
String Apellido1;
String Apellido2;
String Email;
String Telefono;
String Foto;    
}
    
}
