public class Horario {
public static void main(String[] args) {
    
String Id;
String Dia;
String Hora_Inicio;
String Hora_Fin;    
}
}
