public class Parqueadero {

public static void main(String[] args) {
    
String Id; 
String Nombre;
String Area; 
String Cubiculo; 
String Direccion;
Boolean Estado;
 
}    
    
}
