public class Servicio {
public static void main(String[] args) {
  
String Id;
String Fecha_Entrada;
String Fecha_Salida;
String Conductor;
String Vehiculo;
String Guardia_Entrada;
String Guardia_Patio;
Cubiculo
Parqueadero;
String Descripcion;
String Foto;    
    }
    
}
