public class Tarifa {
    public static void main(String[] args) {
       
String Id;
int Valor;
String Tipo;
int unidad;        
    }
    
}
