public class Turno {
public static void main(String[] args) {
    
String Id;
String Horario;
Guardia
Parqueadero;
String Cargo; 
String Observacion;
String cede;    
}
}
