public class Usuario {
    
public static void main(String[] args) {

Long Identificacion;
String Tipo;
String Nombre;
String Apellido1;
String Apellido2;
String Email;
String Telefono;
String Rol; 
String Foto;
Boolean Reserva;    
}    
}
