public class Vehiculo {
public static void main(String[] args) {

String Marca;
String Placa;
String Tipo;
String Color;
  
    }
    
}
